Fixed sidebar scrollbar cut off and sidebar padding

--- a/ARSS/static/css/_sidebar.sass
+++ b/ARSS/static/css/_sidebar.sass
@@ -27,12 +27,13 @@ $sidebarTransitionTime: 0.5s
 	background-color: white
 
 .sidebar-body-wrapper
+	@include vendor(box-sizing, border-box)
 	@include vendor(transition, (width $sidebarTransitionTime, padding $sidebarTransitionTime))
 	@include vendor(box-shadow, (inset -18px 0px 17px -20px #000, inset 16px 0px 20px -20px #000))
 	width: 0
 	height: 100%
 	margin-left: $sidebarLabelWidth
-	padding: 10px 0
+	padding: 7px 0
 
 .sidebar-body
 	@include vendor(box-sizing, border-box)
